# firms-active-fire-pipeline

./: Dockerfile  Makefile  README.md  pyproject.toml
.github/_workflows_pending_scope/: ci.yml
src/firms/: __init__.py  cli.py  pipeline.py  schema.py
tests/: test_pipeline.py
