[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "firms-pipeline"
version = "0.3.0"
description = "NASA FIRMS active-fire ETL: download, validate, deduplicate, write Parquet"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Arash Mozhdehi" }]
dependencies = [
  "pandas>=2.1",
  "numpy>=1.26",
  "pyarrow>=15",
  "httpx>=0.27",
  "pydantic>=2.5",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
postgis = ["geopandas>=0.14", "sqlalchemy>=2.0", "geoalchemy2>=0.15", "psycopg[binary]>=3.2"]
dev = ["pytest>=7", "pytest-cov>=4", "ruff>=0.5", "respx>=0.21"]

[project.scripts]
firms-pipeline = "firms.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
